--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,8 @@ footer {
 .navbar {
   background-color: #901cad;
 }
+
+.site-footer {
+  background-image: linear-gradient(#b7a8f8, white);
+  padding: 20px 0px;
+}
