--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ footer {
 
 .jumbotron {
   padding: 30px;
-  background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
+  background-image: linear-gradient(to left, #658573, #383d21, #3364ab);
   color: white;
   margin: 0;
 }
@@ -35,11 +35,11 @@ footer {
 }
 
 .navbar {
-  background-color: #901cad;
+  background-color: #19141a;
 }
 
 .site-footer {
-  background-image: linear-gradient(#b7a8f8, white);
+  background-image: linear-gradient(#9ebdab, white);
   padding: 20px 0px;
 }
 
