--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,15 @@ footer {
 .carousel {
   border: solid #5637dd;
 }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
