--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -1,56 +1,70 @@
 body {
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+}
 
 h1,
 h2,
 h3 {
-  font-family: 'Lobster', cursive; }
+  font-family: 'Lobster', cursive;
+}
 
 h2 {
-  color: #3046c5; }
+  color: #3046c5;
+}
 
 header h2 {
-  color: #cec8ff; }
+  color: #cec8ff;
+}
 
 footer {
   background-image: linear-gradient(#cec8ff, white);
-  padding: 20px 0; }
+  padding: 20px 0;
+}
 
 .jumbotron {
   padding: 30px;
   background-image: linear-gradient(to left, #658573, #383d21, #3364ab);
   color: white;
-  margin: 0; }
+  margin: 0;
+}
 
 .row-content {
   padding: 50px 0;
   border-bottom: 1px ridge;
-  min-height: 200 px; }
+  min-height: 200 px;
+}
 
 .navbar {
-  background-color: #19141a; }
+  background-color: #19141a;
+}
 
 .site-footer {
   background-image: linear-gradient(#9ebdab, white);
-  padding: 20px 0px; }
+  padding: 20px 0px;
+}
 
 .tab-content {
   border: 1px solid #ddd;
   border-top: none;
-  padding: 10px; }
+  padding: 10px;
+}
 
 .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
 .carousel {
-  border: solid #5637dd; }
+  border: solid #5637dd;
+}
 
 #carouselButton {
   position: absolute;
   right: 0;
-  bottom: 0; }
+  bottom: 0;
+}
 
 #carouselButton {
   position: absolute;
   right: 0;
-  bottom: 0; }
+  bottom: 0;
+}
